-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.6.0, Lustre 2.4.2, Lustre 2.5.2
-
3
-
13095
A console message log from SDSC shows the following after upgrade from 1.8 to 2.4.1:
LustreError: 32221:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32221:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32221:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32225:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32250:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32250:0:(osc_quota.c:277:osc_quotactl()) Skipped 1150 previous similar messages LustreError: 32253:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32253:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 8 previous similar messages LustreError: 32301:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32301:0:(osc_quota.c:277:osc_quotactl()) Skipped 2230 previous similar messages LustreError: 32307:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32307:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 17 previous similar messages LustreError: 32403:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32403:0:(osc_quota.c:277:osc_quotactl()) Skipped 4339 previous similar messages LustreError: 32411:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32411:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 33 previous similar messages LustreError: 32612:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32612:0:(osc_quota.c:277:osc_quotactl()) Skipped 8885 previous similar messages LustreError: 32621:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 32621:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 69 previous similar messages LustreError: 558:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 558:0:(osc_quota.c:277:osc_quotactl()) Skipped 17367 previous similar messages LustreError: 567:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 567:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 135 previous similar messages LustreError: 1377:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 1377:0:(osc_quota.c:277:osc_quotactl()) Skipped 34090 previous similar messages LustreError: 1389:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 1389:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 266 previous similar messages LustreError: 3113:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 3113:0:(osc_quota.c:277:osc_quotactl()) Skipped 67942 previous similar messages LustreError: 3125:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 3125:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 530 previous similar messages LustreError: 6527:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 6527:0:(osc_quota.c:277:osc_quotactl()) Skipped 138988 previous similar messages LustreError: 6542:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 6542:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 1086 previous similar messages LustreError: 12960:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 12960:0:(osc_quota.c:277:osc_quotactl()) Skipped 273863 previous similar messages LustreError: 12975:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 12975:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 2139 previous similar messages LustreError: 28381:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 28381:0:(osc_quota.c:277:osc_quotactl()) Skipped 147711 previous similar messages LustreError: 28381:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 28381:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 1148 previous similar messages LustreError: 30501:0:(osc_quota.c:277:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 30501:0:(osc_quota.c:277:osc_quotactl()) Skipped 67647 previous similar messages LustreError: 30503:0:(mdc_request.c:1728:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95 LustreError: 30503:0:(mdc_request.c:1728:mdc_quotactl()) Skipped 1057 previous similar messages
-95 = -EOPNOTSUPP. It looks like this would continue to spew indefinitely because of some incompatibility between the client and the MDS. It seems this is an expected error, and I'm not sure there is anything the sysadmin can do about this error, so it should just be removed or turned into a D_QUOTA CDEBUG.